Remove location tracking from rounds
