# cmd/swagger/docs/swagger.json
@@ -204,7 +204,7 @@
                         "SessionCookie": []
                     }
                 ],
-                "description": "返回小组成员、玩家、桌游、待确认关联与最近地点",
+                "description": "返回小组成员、玩家、桌游与待确认关联",
                 "produces": [
                     "application/json"
                 ],
@@ -643,14 +643,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "搜索回忆或地点",
+                        "description": "搜索回忆",
                         "name": "q",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "地点",
-                        "name": "location",
                         "in": "query"
                     },
                     {
@@ -1760,9 +1754,6 @@
                 "id": {
                     "type": "string"
                 },
-                "location": {
-                    "type": "string"
-                },
                 "memory": {
                     "type": "string"
                 },
@@ -1875,12 +1866,6 @@
                 },
                 "group": {
                     "$ref": "#/definitions/dto.Group"
-                },
-                "locations": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 },
                 "members": {
                     "type": "array",
